Change next lesson to lessons.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <!--<a href="index.html">-->
-        <button id="unorderedList">Lessons</button>
+        <button class="unorderedList">Lessons</button>
       <!--</a>-->
       <div class=logo>
         <!--
@@ -37,7 +37,7 @@
 <div class=directions>
   <p class="closeDirections">CLOSE</p>
   </br>
-  </br> 
+  </br>
   <p>
     Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've already clicked on. They will appear white. Click <span id="reset">RESET</span> to start fresh.
   </p>
@@ -246,7 +246,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -270,7 +270,7 @@
               <div class="afterReading">
                <button class="readToMe">Read to Me</button>
                <button class="readIt">I Read It!</button>
-               <button class="next">Next Lesson</button>
+               <button class="unorderedList">Lessons</button>
               </div>
            </div>
 
@@ -294,7 +294,7 @@
                   <div class="afterReading">
                    <button class="readToMe">Read to Me</button>
                    <button class="readIt">I Read It!</button>
-                   <button class="next">Next Lesson</button>
+                   <button class="unorderedList">Lessons</button>
                   </div>
                </div>
 
@@ -319,7 +319,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -354,7 +354,7 @@
                   <div class="afterReading">
                    <button class="readToMe">Read to Me</button>
                    <button class="readIt">I Read It!</button>
-                   <button class="next">Next Lesson</button>
+                   <button class="unorderedList">Lessons</button>
                   </div>
                </div>
 
@@ -381,7 +381,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -408,7 +408,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -429,7 +429,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -453,7 +453,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -497,7 +497,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -521,7 +521,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -542,7 +542,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -569,7 +569,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -593,7 +593,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -631,7 +631,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -655,7 +655,7 @@
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
            <button class="readIt">I Read It!</button>
-           <button class="next">Next Lesson</button>
+           <button class="unorderedList">Lessons</button>
           </div>
        </div>
 
@@ -680,7 +680,7 @@
                  <div class="afterReading">
                   <button class="readToMe">Read to Me</button>
                   <button class="readIt">I Read It!</button>
-                  <button class="next">Next Lesson</button>
+                  <button class="unorderedList">Lessons</button>
                  </div>
               </div>
 
@@ -708,7 +708,7 @@
                         <div class="afterReading">
                          <button class="readToMe">Read to Me</button>
                          <button class="readIt">I Read It!</button>
-                         <button class="next">Next Lesson</button>
+                         <button class="unorderedList">Lessons</button>
                         </div>
                      </div>
 
@@ -735,7 +735,7 @@
                                <div class="afterReading">
                                 <button class="readToMe">Read to Me</button>
                                 <button class="readIt">I Read It!</button>
-                                <button class="next">Next Lesson</button>
+                                <button class="unorderedList">Lessons</button>
                                </div>
                             </div>
 
@@ -761,7 +761,7 @@
                                       <div class="afterReading">
                                        <button class="readToMe">Read to Me</button>
                                        <button class="readIt">I Read It!</button>
-                                       <button class="next">Next Lesson</button>
+                                       <button class="unorderedList">Lessons</button>
                                       </div>
                                    </div>
 
@@ -788,7 +788,7 @@
       <div class="afterReading">
        <button class="readToMe">Read to Me</button>
        <button class="readIt">I Read It!</button>
-       <button class="next">Next Lesson</button>
+       <button class="unorderedList">Lessons</button>
       </div>
     </div>
 
@@ -815,7 +815,7 @@
         <div class="afterReading">
          <button class="readToMe">Read to Me</button>
          <button class="readIt">I Read It!</button>
-         <button class="next">Next Lesson</button>
+         <button class="unorderedList">Lessons</button>
         </div>
         </div>
 
@@ -842,7 +842,7 @@
         <div class="afterReading">
          <button class="readToMe">Read to Me</button>
          <button class="readIt">I Read It!</button>
-         <button class="next">Next Lesson</button>
+         <button class="unorderedList">Lessons</button>
         </div>
       </div>
 
@@ -872,7 +872,7 @@
                   <div class="afterReading">
                    <button class="readToMe">Read to Me</button>
                    <button class="readIt">I Read It!</button>
-                   <button class="next">Next Lesson</button>
+                   <button class="unorderedList">Lessons</button>
                   </div>
                 </div>
 
@@ -895,7 +895,7 @@
                       <div class="afterReading">
                        <button class="readToMe">Read to Me</button>
                        <button class="readIt">I Read It!</button>
-                       <button class="next">Next Lesson</button>
+                       <button class="unorderedList">Lessons</button>
                       </div>
                     </div>
 
@@ -919,7 +919,7 @@
                             <div class="afterReading">
                              <button class="readToMe">Read to Me</button>
                              <button class="readIt">I Read It!</button>
-                             <button class="next">Next Lesson</button>
+                             <button class="unorderedList">Lessons</button>
                             </div>
                           </div>
 
@@ -943,7 +943,7 @@
                            <div class="afterReading">
                             <button class="readToMe">Read to Me</button>
                             <button class="readIt">I Read It!</button>
-                            <button class="next">Next Lesson</button>
+                            <button class="unorderedList">Lessons</button>
                            </div>
                          </div>
 
@@ -976,7 +976,7 @@
                           <div class="afterReading">
                            <button class="readToMe">Read to Me</button>
                            <button class="readIt">I Read It!</button>
-                           <button class="next">Next Lesson</button>
+                           <button class="unorderedList">Lessons</button>
                           </div>
                         </div>
 
@@ -1006,7 +1006,7 @@
                          <div class="afterReading">
                           <button class="readToMe">Read to Me</button>
                           <button class="readIt">I Read It!</button>
-                          <button class="next">Next Lesson</button>
+                          <button class="unorderedList">Lessons</button>
                          </div>
                        </div>
 
@@ -1035,7 +1035,7 @@
                        <div class="afterReading">
                         <button class="readToMe">Read to Me</button>
                         <button class="readIt">I Read It!</button>
-                        <button class="next">Next Lesson</button>
+                        <button class="unorderedList">Lessons</button>
                        </div>
                       </div>
 
@@ -1053,7 +1053,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
  </div>
 
@@ -1072,7 +1072,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
  </div>
 
@@ -1091,7 +1091,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1110,7 +1110,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1138,7 +1138,7 @@
  <div class="afterReading">
   <button class="readToMe">Read to Me</button>
   <button class="readIt">I Read It!</button>
-  <button class="next">Next Lesson</button>
+  <button class="unorderedList">Lessons</button>
  </div>
 </div>
 
@@ -1159,7 +1159,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1183,7 +1183,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1213,7 +1213,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1234,7 +1234,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1257,7 +1257,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1278,7 +1278,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1299,7 +1299,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1320,7 +1320,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1344,7 +1344,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1370,7 +1370,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1399,7 +1399,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1423,7 +1423,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1441,7 +1441,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1471,7 +1471,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1492,7 +1492,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1516,7 +1516,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 
@@ -1555,7 +1555,7 @@
    <div class="afterReading">
     <button class="readToMe">Read to Me</button>
     <button class="readIt">I Read It!</button>
-    <button class="next">Next Lesson</button>
+    <button class="unorderedList">Lessons</button>
    </div>
 </div>
 <!--end of stories-->
